# anarchy_core

./: .gitignore  Cargo.toml  Dockerfile  README.md
sql/: init.sql
src/: config.rs  main.rs  state.rs
src/models/: mod.rs  player.rs  user.rs
src/routes/: auth.rs  game.rs  mod.rs
src/services/: auth.rs  game.rs
